Adiciona Splash Screen e ajustes finais de estilo

--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
 </head>
 <body>
 
+    <div id="splash-screen">
+        <div class="splash-content">
+            <img src="imagens/logo-biome.svg" alt="BIOMÊ" class="splash-logo">
+            <div class="loading-bar-container">
+                <div class="loading-bar"></div>
+            </div>
+        </div>
+    </div>
+
     <header id="main-header">
         <img src="imagens/logo-biome.svg" alt="BIOMÊ" class="logo">
     </header>
@@ -83,6 +92,24 @@
     <button id="btn-voltar-grid" class="botao-voltar tela-oculta">
     <i class="fa-solid fa-arrow-left-long"></i>
 </button>
+
+<div id="insta-notification" class="notification-toast">
+        <button id="close-notification" class="close-btn">&times;</button>
+        
+        <div class="notification-content">
+            <div class="notification-icon">
+                <i class="fa-brands fa-instagram"></i>
+            </div>
+            <div class="notification-text">
+                <h4>Siga a BIOMÊ</h4>
+                <p>🌿 Design autoral com identidade brasileira e amazônica.</p>
+            </div>
+        </div>
+
+        <a href="https://www.instagram.com/biome.amazonia/" target="_blank" class="notification-action-btn">
+            Seguir
+        </a>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     
