Fix: Tela branca ao voltar para Stories

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="footer-brand">
                 <img src="imagens/hand_s_biome.svg" alt="BIOMÊ Ícone" class="footer-brand-icon">
                 <p class="footer-brand-description">
-                    Móveis de design com alma brasileira, criados para durar.
+                    🌿 Design autoral com identidade brasileira e amazônica
                 </p>
             </div>
 
